--- a/index.html
+++ b/index.html
@@ -1,17 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Morya Mobile Shopee</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to Morya Mobile Shopee</h1>
-  <nav>
-    <a href="about.html">About</a> |
-    <a href="products.html">Products</a> |
-    <a href="gallery.html">Gallery</a> |
-    <a href="contact.html">Contact</a>
-  </nav>
-  <p>Find the best mobiles at the best prices!</p>
+  <header>
+    <h1>Welcome to Morya Mobile Shopee</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#products">Products</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Us</h2>
+    <p>Find the best mobiles at the best prices!</p>
+  </section>
+
+  <section id="products">
+    <h2>Our Products</h2>
+    <div class="product-grid">
+      <div class="product-card">
+        <img src="images/phone1.jpg" alt="Phone 1">
+        <h3>Samsung Galaxy M14</h3>
+        <p>Price: ₹11,999</p>
+      </div>
+      <div class="product-card">
+        <img src="images/phone2.jpg" alt="Phone 2">
+        <h3>Redmi Note 13</h3>
+        <p>Price: ₹13,499</p>
+      </div>
+      <!-- Add more products here -->
+    </div>
+  </section>
+
+  <section id="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <img src="images/phone1.jpg" alt="Gallery Image">
+      <img src="images/phone2.jpg" alt="Gallery Image">
+      <!-- More images -->
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: moryamobileshopee@example.com</p>
+    <p>Phone: +91 9876543210</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Morya Mobile Shopee</p>
+  </footer>
 </body>
 </html>
