--- a/products.html
+++ b/products.html
@@ -1,53 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Products - Morya Mobile Shopee</title>
-  <style>
-    .product {
-      display: inline-block;
-      width: 200px;
-      margin: 10px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      text-align: center;
-      position: relative;
-    }
-    .product img {
-      width: 100%;
-      height: auto;
-    }
-    .sale {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      background: red;
-      color: white;
-      padding: 5px;
-      font-size: 14px;
-      border-radius: 5px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Morya Mobile Shopee - Products</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="popup.js" defer></script>
 </head>
 <body>
-  <h1>Mobile Products</h1>
-  <div class="product">
-    <div class="sale">Sale</div>
-    <img src="iphone.jpg" alt="iPhone">
-    <h3>iPhone 14</h3>
-    <p>Price: ₹74,999</p>
+  <header>
+    <h1>Morya Mobile Shopee</h1>
+    <p>Hot Deals | Festive Offers | Top Brands</p>
+  </header>
+
+  <div id="offer-popup" class="popup">
+    <span class="close">&times;</span>
+    <p>Big Festive Offer! Flat 10% OFF on Selected Mobiles</p>
   </div>
 
-  <div class="product">
-    <img src="samsung.jpg" alt="Samsung">
-    <h3>Samsung Galaxy S23</h3>
-    <p>Price: ₹69,999</p>
-  </div>
+  <div class="product-grid">
+    <!-- Example Product Card -->
+    <div class="product-card">
+      <img src="images/iphone14.jpg" alt="iPhone 14">
+      <h3>iPhone 14 Pro</h3>
+      <p>128GB, Deep Purple</p>
+      <p class="price">₹1,29,900 <span class="discount">₹1,19,900</span></p>
+      <button>Add to Cart</button>
+    </div>
 
-  <div class="product">
-    <div class="sale">Sale</div>
-    <img src="redmi.jpg" alt="Redmi">
-    <h3>Redmi Note 12</h3>
-    <p>Price: ₹12,999</p>
+    <!-- Repeat for 19 more mobiles... -->
   </div>
 </body>
 </html>
