--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
     <p>Email: moryamobileshopee@example.com</p>
     <p>Phone: +91 9876543210</p>
   </section>
-
+    <section>
+<div class="banner">
+  <img src="images/banner1.png" alt="Morya Mobile Banner">
+    </section>
+</div>
   <footer>
     <p>&copy; 2025 Morya Mobile Shopee</p>
   </footer>
 </body>
 </html>
-<div class="banner">
-  <img src="images/banner1.png" alt="Morya Mobile Banner">
-</div>
+
