--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <p>Find the best mobiles at the best prices!</p>
   </section>
 
+  <div class="promo-banner">
+  <img src="images/offer-banner.png" alt="Festive Offer Banner">
+</div>
+  
   <section id="products">
     <h2>Our Products</h2>
     <div class="product-grid">
