--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <header>
     <h1>Welcome to Morya Mobile Shopee</h1>
     <nav>
+<div class="promo-banner">
+  <img src="images/offer-banner.png" alt="Festive Offer Banner">
+</div>
       <a href="#about">About</a>
       <a href="#products">Products</a>
       <a href="#gallery">Gallery</a>
