--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Morya Mobile Shopee</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     * {
       margin: 0;
@@ -12,6 +13,7 @@
     }body {
   background-color: #f7f9fc;
   color: #333;
+  position: relative;
 }
 
 header {
@@ -141,6 +143,24 @@ iframe {
   border-radius: 10px;
 }
 
+.whatsapp-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366;
+  color: white;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  z-index: 999;
+  text-decoration: none;
+}
+
   </style>
 </head><body>
   <header>
@@ -214,10 +234,15 @@ iframe {
     </blockquote>
   </section>  <footer>
     <p>Contact: +91-7219817005 | <a href="https://maps.app.goo.gl/cZ4rj8KbtsNkHcms5" target="_blank">Visit on Google Maps</a></p>
-    <p>Follow us:
-      <a href="https://www.instagram.com/moryamobile2023" target="_blank">Instagram</a>
+    <p>
+      Follow us:
+      <a href="https://www.instagram.com/moryamobile2023" target="_blank">
+        <i class="fab fa-instagram"></i> Instagram
+      </a>
     </p>
-  </footer>  <script>
+  </footer>  <a href="https://wa.me/918788627432" class="whatsapp-button" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+  </a>  <script>
     function toggleMenu() {
       const menu = document.getElementById('menu');
       menu.style.display = menu.style.display === 'flex' ? 'none' : 'flex';
