--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Morya Mobile Logo" />
+    <img src="images/logo.png" alt="Morya Mobile Logo" />
     <h1>मोरया मोबाईल</h1>
     <nav>
       <a href="#services">Services</a>
@@ -103,7 +103,7 @@
     </div>
   </section>  <section id="owner" class="owner">
     <h2>Owner</h2>
-    <img src="owner.jpg" alt="Kiran Tambe" />
+    <img src="images/owner.jpg" alt="Kiran Tambe" />
     <h3>Kiran Tambe</h3>
     <p>Dedicated to providing the best service and trusted by hundreds of customers in the area.</p>
   </section>  <section id="accessories">
