--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>मोरया मोबाईल</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Inter', sans-serif; background: #f4f6f8; color: #212529; }
@@ -20,6 +21,8 @@
     .product h3 { margin: 0.5rem 0; font-size: 1.1rem; }
     .product p { margin: 0.2rem 0; }
     .discount { color: green; font-weight: bold; }
+    .contact-icons a { display: flex; align-items: center; margin: 0.5rem 0; color: #212529; text-decoration: none; font-weight: 500; }
+    .contact-icons a i { margin-right: 10px; font-size: 1.2rem; color: #d90429; }
     footer { background: #1f1f2e; color: #fff; text-align: center; padding: 1rem; margin-top: 2rem; }
   </style>
 </head>
@@ -90,11 +93,12 @@
     </div>
   </section>  <section class="section" id="contact">
     <h2>Contact Us</h2>
-    <p>Owner: Kiran Tambe</p>
-    <p>WhatsApp: <a href="https://wa.me/919999999999">+91 99999 99999</a></p>
-    <p>Instagram: <a href="https://www.instagram.com/moryamobile">@moryamobile</a></p>
-    <p>Email: support@moryamobile.com</p>
-    <p><a href="https://www.google.com/maps">Google Maps Location</a></p>
+    <div class="contact-icons">
+      <a href="tel:8788627532"><i class="fas fa-phone-alt"></i>Call: 8788627532</a>
+      <a href="https://wa.me/918788627532" target="_blank"><i class="fab fa-whatsapp"></i>WhatsApp: 8788627532</a>
+      <a href="https://www.instagram.com/moryamobile2023?igsh=MWY5MGo5bWl6YzU4dg==" target="_blank"><i class="fab fa-instagram"></i>Instagram</a>
+      <a href="https://maps.app.goo.gl/2xs3qxtt2GaitwtV7" target="_blank"><i class="fas fa-map-marker-alt"></i>Store Location</a>
+    </div>
   </section>  <footer>
     <p>&copy; 2025 मोरया मोबाईल. All rights reserved.</p>
   </footer>
